k8s/datastore/qdrant-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skipa-qdrant
  namespace: skala3-finalproj-class2-team8
spec:
  serviceName: skipa-qdrant-headless
  replicas: 1
  selector:
    matchLabels:
      app: skipa-qdrant
  template:
    metadata:
      labels:
        app: skipa-qdrant
    spec:
      containers:
        - name: qdrant
          image: qdrant/qdrant:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6333
              name: http
            - containerPort: 6334
              name: grpc
          volumeMounts:
            - name: qdrant-data
              mountPath: /qdrant/storage
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 6333
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6333
            initialDelaySeconds: 60
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: qdrant-data
      spec:
        storageClassName: gp3
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
