k8s/datastore/redis-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skipa-redis
  namespace: skala3-finalproj-class2-team8
spec:
  serviceName: skipa-redis-headless
  replicas: 1
  selector:
    matchLabels:
      app: skipa-redis
  template:
    metadata:
      labels:
        app: skipa-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
          command:
            - sh
            - -c
            - redis-server --requirepass "$REDIS_PASSWORD" --appendonly yes
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a "$REDIS_PASSWORD" ping | grep PONG
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a "$REDIS_PASSWORD" ping | grep PONG
            initialDelaySeconds: 30
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        storageClassName: gp3
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
