k8s/datastore/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-minio
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: skipa-minio-headless
  namespace: skala3-finalproj-class2-team8
spec:
  clusterIP: None
  selector:
    app: skipa-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
