k8s/datastore/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-postgres-headless
  namespace: skala3-finalproj-class2-team8
spec:
  clusterIP: None
  selector:
    app: skipa-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: skipa-postgres
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
