k8s/datastore/qdrant-service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-qdrant-headless
  namespace: skala3-finalproj-class2-team8
spec:
  clusterIP: None
  selector:
    app: skipa-qdrant
  ports:
    - name: http
      port: 6333
      targetPort: 6333
    - name: grpc
      port: 6334
      targetPort: 6334
---
apiVersion: v1
kind: Service
metadata:
  name: skipa-qdrant
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-qdrant
  ports:
    - name: http
      port: 6333
      targetPort: 6333
    - name: grpc
      port: 6334
      targetPort: 6334
