k8s/datastore/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-redis-headless
  namespace: skala3-finalproj-class2-team8
spec:
  clusterIP: None
  selector:
    app: skipa-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: skipa-redis
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
