k8s/datastore/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skipa-minio-ingress
  namespace: skala3-finalproj-class2-team8
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public-nginx
  tls:
    - hosts:
        - minio-team8-skipa.skala25a.project.skala-ai.com
      secretName: skipa-minio-tls
  rules:
    - host: minio-team8-skipa.skala25a.project.skala-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skipa-minio
                port:
                  number: 9000
